# blly

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup_kernel.sh  update_firmware.sh
gpio_code/: gpio.h
launch/: goforward.launch  gpio.launch  launch_turtlebot.launch  track_copter.launch  view_bagfile.launch  view_camera.launch
rviz/: blly_view.rviz
src/: follow_object.cpp  gpio.cpp  gpio_talker.cpp  track_copter.cpp
src/classifiers/copter_25_25/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_all_1000_1000_34ths/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_all_1000_1000_half/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_all_1000_500_half/: stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_all_500_500/: params.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage15.xml  stage17.xml  stage19.xml  stage2.xml  stage3.xml  stage6.xml  stage7.xml
src/classifiers/copter_all_500_500_34ths/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_all_500_500_4th/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_left_right_100_100/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_left_right_300_300/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/copter_left_right_300_300_haar/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/classifiers/test01/: cascade.xml  stage0.xml  stage13.xml  stage14.xml  stage16.xml  stage18.xml  stage4.xml  stage5.xml  stage8.xml  stage9.xml
src/gpio_code/: gpio.c  gpio.cpp  gpio.h
srv/: use_classifier.srv
